apps/olympus/dubquick/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dubquick
  labels:
    kubernetes.io/metadata.name: dubquick
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
